--- a/.github/workflows/main_dinet-staging-web.yml
+++ b/.github/workflows/main_dinet-staging-web.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - dinet-staging-web
+name: Deploy Next.js to Azure Web App
 
 on:
   push:
@@ -10,56 +7,40 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up Node.js version
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: '20'
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+      - name: Install dependencies
+        run: npm install
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-app
-          path: .
+      - name: Build Next.js app
+        run: npm run build
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      - name: Zip artifact for deployment
+        run: zip -r release.zip .next public package.json node_modules next.config.js
 
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
-      
       - name: Login to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_7FF551F2A10C468793A045E5EF27A67A }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_135063EDE3B34A7AA68866CF02923448 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F9FCDB2931724A639FF143DEFFD7435E }}
-
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+          
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'dinet-staging-web'
           slot-name: 'Production'
-          package: .
-          
+          package: release.zip
