--- a/.github/workflows/main_dinet-staging-web.yml
+++ b/.github/workflows/main_dinet-staging-web.yml
@@ -1,35 +1,57 @@
-name: Deploy Next.js to Azure Web App
+name: Build and deploy Next.js to Azure Web App
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Use Node 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
+      - name: Install dependencies (clean)
+        run: npm ci
+
+      - name: Build Next.js
+        run: npm run build
+
+      - name: Prune to production dependencies
+        run: npm ci --omit=dev
+
+      - name: Prepare deployment artifact
+        run: |
+          mkdir -p deploy
+          cp -r .next public package.json next.config.js deploy/
+          cp -r node_modules deploy/node_modules
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: nextjs-app
+          path: deploy
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
     permissions:
       id-token: write
       contents: read
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Download artifact
+        uses: actions/download-artifact@v4
         with:
-          node-version: '20'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build Next.js app
-        run: npm run build
-
-      - name: Zip artifact for deployment
-        run: zip -r release.zip .next public package.json node_modules next.config.js
+          name: nextjs-app
+          path: .
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -37,10 +59,12 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_7FF551F2A10C468793A045E5EF27A67A }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_135063EDE3B34A7AA68866CF02923448 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F9FCDB2931724A639FF143DEFFD7435E }}
-          
+
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'dinet-staging-web'
           slot-name: 'Production'
-          package: release.zip
+          package: .
+
+
