--- a/.github/workflows/main_dinet-staging-web.yml
+++ b/.github/workflows/main_dinet-staging-web.yml
@@ -1,58 +1,53 @@
-name: Build and deploy Next.js to Azure Web App
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy Node.js app to Azure Web App - dinet-staging-web
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: read #This is required for actions/checkout
+
     steps:
       - uses: actions/checkout@v4
 
-      - name: Use Node 20
-        uses: actions/setup-node@v4
+      - name: Set up Node.js version
+        uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-          cache: 'npm'
 
-      - name: Install dependencies (clean)
-        run: npm ci
-
-      - name: Build Next.js
-        run: npm run build
-
-      - name: Prune to production dependencies
-        run: npm ci --omit=dev
-
-      - name: Prepare deployment artifact
+      - name: npm install, build, and test
         run: |
-          mkdir -p deploy
-          cp -r .next public package.json next.config.js deploy/
-          cp -r node_modules deploy/node_modules
+          npm install
+          npm run build --if-present
+          npm run test --if-present
 
-      - name: Upload artifact
+      - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: nextjs-app
-          path: deploy
+          name: node-app
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write
-      contents: read
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
+
     steps:
-      - name: Download artifact
+      - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: nextjs-app
-          path: .
-
+          name: node-app
+      
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -60,11 +55,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_135063EDE3B34A7AA68866CF02923448 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F9FCDB2931724A639FF143DEFFD7435E }}
 
-      - name: Deploy to Azure Web App
+      - name: 'Deploy to Azure Web App'
+        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'dinet-staging-web'
           slot-name: 'Production'
           package: .
-
-
